--- a/css/brands.css
+++ b/css/brands.css
@@ -604,3 +604,10 @@
 	--button-background:#0B5CFF;
   --button-border:1px solid #FFFFFF;
 }
+
+/* Codeberg */
+.button-codeberg {
+    --button-text: #000000;
+    --button-background: #ffffff;
+    --button-border: 1px solid #000000;
+}
