--- a/css/brands.css
+++ b/css/brands.css
@@ -626,3 +626,10 @@
     --button-border: 1px solid #FFFFFF;
 }
 
+/* Tox */
+.button-tox {
+    --button-text: #000000;
+    --button-background: #ffffff;
+    --button-border: 1px solid #000000;
+}
+
